# telegram-bot1

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  github-auto-sync-hidden.vbs  github-auto-sync.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  start_bot.cmd
alembic/: env.py
alembic/versions/: 20260715_01_add_payments.py  20260720_01_broadcaster_schema.py
app/: __init__.py  api.py  config.py  database.py  main.py  migrations.py  models.py  web_server.py
app/handlers/: admin.py  ads.py  broadcast.py  links.py  payment_admin.py  private_messages.py  source_channel.py  subscribers.py  subscriptions.py  user.py
app/keyboards/: admin.py  payments.py  user.py
app/middleware/: __init__.py  access.py  rate_limit.py
app/repositories/: source_posts.py  subscribers.py
app/services/: ad_service.py  auth_service.py  broadcast_service.py  broadcast_service.py.message_id_none_fix_backup  broadcast_service.py.send_parts_fix_backup  diskwala_client.py  user_service.py  (+9 more)
deploy/: telegram-bot.service
scripts/: backup_database.py  bot_status.py  cleanup_temp.py  run_checks.ps1  telethon_login.py  test_diskwala_converter.py
tests/: conftest.py  test_ads.py  test_authorization.py  test_backup.py  test_broadcasting.py  test_channel_detection.py  test_config.py  test_diskwala_client.py  test_handlers_and_config.py  test_link_validator.py  test_manual_broadcast.py  test_migrations.py  test_payments.py  test_post_processing.py  test_rate_limit.py  test_source_queue.py  test_subscriptions.py
(+8 files in other folders)
