[project]
name = "telegram-bot"
version = "0.1.0"
description = "A Telegram bot that broadcasts text-only DiskWala affiliate updates."
requires-python = ">=3.12,<3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["data", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
